# fwts

./: .gitignore  .travis.yml  Makefile.am  Makefile.in  README  README_ACPI.txt  README_ACPICA.txt  README_SOURCE.txt  TODO.txt  config.h.in  configure  configure.ac  copy-acpica.sh  cppcheck.sh  git.mk  libtool  make_orig_tarball.sh  quick-test.sh  smatchify.sh  snapcraft.yaml  update_version.sh
src/: Makefile.am  Makefile.in  main.c
src/acpi/: Makefile.am  Makefile.in
src/acpi/ac_adapter/: ac_adapter.c
src/acpi/acpidump/: acpidump.c
src/acpi/acpiinfo/: acpiinfo.c
src/acpi/acpipld/: acpipld.c
src/acpi/acpitables/: acpitables.c
src/acpi/aest/: aest.c
src/acpi/apicinstance/: apicinstance.c
src/acpi/apmt/: apmt.c
src/acpi/asf/: asf.c
src/acpi/aspt/: aspt.c
src/acpi/battery/: battery.c
src/acpi/bert/: bert.c
src/acpi/bgrt/: bgrt.c
src/acpi/boot/: boot.c
src/acpi/brightness/: autobrightness.c  brightness-helper.c  brightness-helper.h  brightness.c
src/acpi/ccel/: ccel.c
src/acpi/cedt/: cedt.c
src/acpi/checksum/: checksum.c
src/acpi/common/: common.c
src/acpi/cpep/: cpep.c
src/acpi/crsdump/: crsdump.c  crsdump.h  prsdump.c
src/acpi/csrt/: csrt.c
src/acpi/cstates/: cstates.c
src/acpi/dbg2/: dbg2.c
src/acpi/dbgp/: dbgp.c
src/acpi/dmar/: dmar.c
src/acpi/dppt/: dppt.c
src/acpi/drtm/: drtm.c
src/acpi/dsddump/: dsddump.c
src/acpi/ecdt/: ecdt.c
src/acpi/einj/: einj.c
src/acpi/erst/: erst.c
src/acpi/facs/: facs.c
src/acpi/fadt/: fadt.c
src/acpi/fan/: fan.c
src/acpi/fpdt/: fpdt.c
src/acpi/gpedump/: gpedump.c
src/acpi/gtdt/: gtdt.c
src/acpi/hest/: hest.c
src/acpi/hmat/: hmat.c
src/acpi/hpet/: hpet.c
src/acpi/ibft/: ibft.c
src/acpi/iort/: iort.c
src/acpi/ivrs/: ivrs.c
src/acpi/klog/: Makefile  Makefile.am  Makefile.in  klog.c
src/acpi/lid/: lid.c
src/acpi/lpit/: lpit.c
src/acpi/madt/: madt.c
src/acpi/mcfg/: mcfg.c
src/acpi/mchi/: mchi.c
src/acpi/method/: method.c
src/acpi/misc/: misc.c
src/acpi/mpam/: mpam.c
src/acpi/mpst/: mpst.c
src/acpi/msct/: msct.c
src/acpi/msdm/: msdm.c
src/acpi/nfit/: nfit.c
src/acpi/nhlt/: nhlt.c
src/acpi/nhltdump/: nhltdump.c
src/acpi/osilinux/: osilinux.c
src/acpi/pcc/: pcc.c
src/acpi/pcct/: pcct.c
src/acpi/pdtt/: pdtt.c
src/acpi/phat/: phat.c
src/acpi/plddump/: plddump.c
src/acpi/pmtt/: pmtt.c
src/acpi/powerbutton/: powerbutton.c
src/acpi/pptt/: pptt.c
src/acpi/ras2/: ras2.c
src/acpi/rasf/: rasf.c
src/acpi/rgrt/: rgrt.c
src/acpi/rhct/: rhct.c
src/acpi/rsdp/: rsdp.c
src/acpi/rsdt/: rsdt.c
src/acpi/s3/: s3.c
src/acpi/s3power/: s3power.c
src/acpi/s3pt/: s3pt.c
src/acpi/s4/: s4.c
src/acpi/sbst/: sbst.c
src/acpi/sdei/: sdei.c
src/acpi/sdev/: sdev.c
src/acpi/skvl/: skvl.c
src/acpi/slic/: slic.c
src/acpi/slit/: slit.c
src/acpi/spcr/: spcr.c
src/acpi/spmi/: spmi.c
src/acpi/srat/: srat.c
src/acpi/stao/: stao.c
src/acpi/svkl/: svkl.c
src/acpi/syntaxcheck/: Makefile.am  Makefile.in  syntaxcheck.c
src/acpi/tcpa/: tcpa.c
src/acpi/tpm2/: tpm2.c
src/acpi/uefi/: uefi.c
src/acpi/uniqueid/: uniqueid.c
src/acpi/viot/: viot.c
src/acpi/waet/: waet.c
src/acpi/wakealarm/: Makefile.am  Makefile.in  wakealarm.c
src/acpi/wdat/: wdat.c
src/acpi/wmi/: wmi.c
src/acpi/wpbt/: wpbt.c
src/acpi/wsmt/: wsmt.c
src/acpi/xenv/: xenv.c
src/acpi/xsdt/: xsdt.c
src/acpica/: .gitignore  Makefile.am  Makefile.in  fwts_acpica.c
src/apic/apicedge/: apicedge.c
src/bios/bios32/: bios32.c
src/bios/bios_info/: bios_info.c
src/bios/e820dump/: e820dump.c
src/bios/ebda_region/: ebda_region.c
src/bios/ebdadump/: ebdadump.c
src/bios/hdaaudio/: hdaaudio.c
src/bios/interrupt/: interrupt.c
src/bios/memmapdump/: memmapdump.c
src/bios/mtrr/: mtrr.c
src/bios/multiproc/: mpcheck.c  mpdump.c
src/bios/os2gap/: os2gap.c
src/bios/pciirq/: pciirq.c
src/bios/pnp/: pnp.c
src/bios/romdump/: romdump.c
src/bios/s0idle/: s0idle.c
src/bios/smbios/: smbios.c
src/bios/smm/: smm.c
src/cmos/cmosdump/: cmosdump.c
src/coreboot/clog/: clog.c
src/cpu/cpufreq/: cpufreq.c
src/cpu/maxfreq/: maxfreq.c
src/cpu/microcode/: microcode.c
src/cpu/msr/: msr.c
src/cpu/nx/: nx.c
src/cpu/thermal_trip/: thermal_trip.c
src/cpu/virt/: virt.c  virt.h  virt_svm.c  virt_vmx.c
src/devicetree/dt_base/: dt_base.c
src/devicetree/dt_sysinfo/: dt_sysinfo.c
src/dmi/: Makefile.am  Makefile.in
src/dmi/dmi_decode/: Makefile.am  Makefile.in  dmi_decode.c
src/dmi/dmicheck/: dmicheck.c
src/example/blank/: blank.c
src/hotkey/hotkey/: hotkey.c
src/hpet/hpet_check/: hpet_check.c
src/ipmi/bmc/: bmc_info.c
src/kernel/klog/: klog.c
src/kernel/olog/: olog.c
src/kernel/oops/: oops.c
src/kernel/version/: version.c
src/lib/: Makefile.am  Makefile.in
src/lib/include/: acpi.h  checkeuid.h  dsdt.h  fileio.h  framework.h  fwts.h  fwts_ac_adapter.h  fwts_acpi.h  fwts_acpi_method.h  fwts_acpi_object_eval.h  fwts_acpi_tables.h  fwts_acpica.h  fwts_acpica_mode.h  fwts_acpid.h  fwts_alloc.h  fwts_arch.h  fwts_args.h  fwts_aspm.h  fwts_backtrace.h  fwts_battery.h  fwts_binpaths.h  fwts_button.h  fwts_checkeuid.h  fwts_checksum.h  fwts_clog.h  fwts_cmos.h  fwts_coreboot.h  fwts_cpu.h  fwts_devicetree.h  fwts_dsdt.h  fwts_dump.h  fwts_dump_data.h  fwts_e820.h  fwts_ebda.h  fwts_efi_module.h  fwts_efi_runtime.h  fwts_fileio.h  fwts_firmware.h  fwts_formatting.h  fwts_framework.h  (+57 more)
src/lib/src/: Makefile.am  Makefile.in  acpi.c  acpi_tables.c  acpica.c  acpid.c  args.c  binpaths.c  checkeuid.c  cmos.c  cpu.c  dsdt.c  dump.c  dump_data.c  e820.c  fileio.c  firmware.c  formatting.c  framework.c  fwts_ac_adapter.c  fwts_acpi.c  fwts_acpi_method.c  fwts_acpi_object_eval.c  fwts_acpi_tables.c  fwts_acpica.c  (+94 more)
src/libfwtsacpica/: Makefile.am  fwts_acpica.c
src/libfwtsiasl/: Makefile.am  fwts_iasl_interface.c  fwts_iasl_interface.h
src/opal/: cpu_info.c  mem_info.c  mtd_info.c  pci_info.c  power_mgmt_info.c  prd_info.c  reserv_mem.c
src/smccc/: psci.c  smccc.c
src/utilities/: Makefile.am  kernelscan.c  kernelscan.sh
(+331 files in other folders)
