SUBDIRS = src data src/utilities

ACLOCAL_AMFLAGS = -I m4

TESTS_ENVIRONMENT = export LC_ALL=C;
TESTS_ENVIRONMENT += export FWTS='$(srcdir)/src/fwts';
TESTS_ENVIRONMENT += export FWTSTESTDIR='$(srcdir)/fwts-test';
TESTS_ENVIRONMENT += export TMP=/tmp;
TESTS_ENVIRONMENT += export FAILURE_LOG=/tmp/failure.log;

TESTS = fwts-test/acpidump-0001/test-0001.sh \
	fwts-test/acpitables-0001/test-0001.sh \
	fwts-test/acpitables-0003/test-0001.sh \
	fwts-test/acpitables-0004/test-0001.sh \
	fwts-test/acpitables-0005/test-0001.sh \
	fwts-test/apicinstance-0001/test-0001.sh \
	fwts-test/apicinstance-0001/test-0002.sh \
	fwts-test/arg-help-0001/test-0001.sh \
	fwts-test/arg-help-0001/test-0002.sh \
	fwts-test/arg-json-0001/test-0001.sh \
	fwts-test/arg-json-0001/test-0002.sh \
	fwts-test/arg-json-0001/test-0003.sh \
	fwts-test/arg-json-0001/test-0004.sh \
	fwts-test/arg-klog-0001/test-0001.sh \
	fwts-test/arg-klog-0001/test-0002.sh \
	fwts-test/arg-log-fields-0001/test-0001.sh \
	fwts-test/arg-log-format-0001/test-0001.sh \
	fwts-test/arg-log-format-0001/test-0002.sh \
	fwts-test/arg-log-format-0001/test-0003.sh \
	fwts-test/arg-log-format-0001/test-0004.sh \
	fwts-test/arg-quiet-0001/test-0001.sh \
	fwts-test/arg-quiet-0001/test-0002.sh \
	fwts-test/arg-results-0001/test-0001.sh \
	fwts-test/arg-results-0001/test-0002.sh \
	fwts-test/arg-results-0001/test-0003.sh \
	fwts-test/arg-results-0001/test-0004.sh \
	fwts-test/arg-results-0001/test-0005.sh \
	fwts-test/arg-results-0001/test-0006.sh \
	fwts-test/arg-results-no-separators-0001/test-0001.sh \
	fwts-test/arg-show-progress-dialog-0001/test-0001.sh \
	fwts-test/arg-show-progress-dialog-0001/test-0002.sh \
	fwts-test/arg-show-tests-0001/test-0001.sh \
	fwts-test/arg-show-tests-0001/test-0002.sh \
	fwts-test/arg-show-tests-full-0001/test-0001.sh \
	fwts-test/arg-table-path-0001/test-0001.sh \
	fwts-test/arg-table-path-0001/test-0002.sh \
	fwts-test/arg-width-0001/test-0001.sh \
	fwts-test/arg-width-0001/test-0002.sh \
	fwts-test/arg-width-0001/test-0003.sh \
	fwts-test/arg-width-0001/test-0004.sh \
	fwts-test/arg-width-0001/test-0005.sh \
	fwts-test/arg-width-0001/test-0006.sh \
	fwts-test/arg-width-0001/test-0007.sh \
	fwts-test/arg-width-0001/test-0008.sh \
	fwts-test/bert-0001/test-0001.sh \
	fwts-test/bert-0001/test-0002.sh \
	fwts-test/boot-0001/test-0001.sh \
	fwts-test/boot-0001/test-0002.sh \
	fwts-test/checksum-0001/test-0001.sh \
	fwts-test/checksum-0001/test-0003.sh \
	fwts-test/checksum-0001/test-0004.sh \
	fwts-test/dbg2-0001/test-0001.sh \
	fwts-test/dbg2-0001/test-0002.sh \
	fwts-test/dbgp-0001/test-0001.sh \
	fwts-test/dbgp-0001/test-0002.sh \
	fwts-test/disassemble-0001/test-0001.sh \
	fwts-test/klog-0001/test-0001.sh \
	fwts-test/klog-0001/test-0002.sh \
	fwts-test/klog-0001/test-0003.sh \
	fwts-test/klog-0002/test-0001.sh \
	fwts-test/klog-0002/test-0002.sh \
	fwts-test/klog-0002/test-0003.sh \
	fwts-test/madt-0001/test-0001.sh \
	fwts-test/madt-0001/test-0002.sh \
	fwts-test/method-0001/test-0001.sh \
	fwts-test/oops-0001/test-0001.sh \
	fwts-test/oops-0001/test-0002.sh \
	fwts-test/oops-0001/test-0003.sh \
	fwts-test/osilinux-0001/test-0001.sh \
	fwts-test/osilinux-0001/test-0002.sh \
	fwts-test/rsdp-0001/test-0001.sh \
	fwts-test/rsdt-0001/test-0001.sh \
	fwts-test/syntaxcheck-0001/test-0001.sh \
	fwts-test/wmi-0001/test-0001.sh \
	fwts-test/wmi-0001/test-0002.sh \
	fwts-test/wmi-0001/test-0003.sh \
	fwts-test/xsdt-0001/test-0001.sh
